# game-of-tag

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  game_of_tag.code-workspace  package.json  webdriver.json
docs/: 0.bootstrap.js  1.bootstrap.js  bootstrap.js
src/: lib.rs  lib_tests.rs
tests/: web.rs
www/: index.html  index.js  package.json
www/src/: draw.js  fps.js
